[package]
name = "combo_vec"
version = "0.4.2"
edition = "2021"
authors = ["VirxEC"]
description = "An array that can be resized at runtime but allocated stack space at compile time and doesn't move any data off the stack when it overflows"
readme = "README.md"
repository = "https://github.com/VirxEC/extendable_array"
license = "GPL-3.0-only"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
