[package]
name = "combo_vec"
version = "0.6.0"
edition = "2021"
authors = ["VirxEC"]
description = "An array that can be resized at runtime but allocated stack space at compile time and doesn't move any data off the stack when it overflows"
readme = "README.md"
repository = "https://github.com/VirxEC/combo_vec"
license = "MIT"
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"

[features]
default = ["alloc"]
alloc = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
