[package]
name = "combo_vec"
version = "0.9.0"
edition = "2021"
authors = ["VirxEC"]
description = "A blazingly fast no-std vector-like ADT using the stack (and optionally heap for overflow)"
readme = "README.md"
repository = "https://github.com/VirxEC/combo_vec"
license = "MIT"
categories = ["data-structures"]
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[features]
default = ["alloc"]
alloc = []

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dev-dependencies]
criterion = "0.6.0"
smallvec = { version = "1.11.2", features = [
    "const_new",
    "const_generics",
    "union",
] }
arrayvec = "0.7.4"

[[bench]]
name = "bench"
required-features = ["alloc"]
harness = false
